--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <a class="nav-link" href="#trainings">ABOUT</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="#classes">SESIONS</a>
+                        <a class="nav-link" href="#classes">SESSIONS</a>
                      </li>
                      <li class="nav-item">
                         <a class="nav-link" href="#shortcides">CONTACT</a>
