--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                      <li class="nav-item">
                         <a class="nav-link" href="#shortcides">CONTACT</a>
                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#shortcides">JOIN CALISTHENICS&SW CLUB</a>
+                     </li>
             
                   </ul>
                </div>
@@ -148,9 +151,24 @@ Training will take at calisthenics park on Saturdays (You will recive info via e
             </div>
             <div class="row">
               <p><h2>If you have any question don't hesitate to contact me.</h2></p>
-               <a id="mailto" href="mailto:araz.shafiyev@ufaz.az"><i class="fa fa-envelope" aria-hidden="true"></i>araz.shafiyev@ufaz.az</a>
+               <div class="col-md-12 text_align_center"><a id="mailto" href="mailto:araz.shafiyev@ufaz.az"><h3 style="color:blue;">araz.shafiyev@ufaz.az</h3></a></div>
+            </div>
+
+       <div id="trainings" class="layout_padding">
+         <div class="container">
+            <div class="row">
+               <div class="col-md-12 text_align_center">
+                  <h2 class="heading_section">JOIN CALISTHENICS&SW CLUB</h3>
+               </div>
+            </div>
+            <div class="row">
+               <p><h2>⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀</h2></p>
+             <div class="col-md-12 text_align_center"><a href="https://forms.gle/CSUpXFYtVVHqmMJn8"> <button class="more" ><span>Become a CLub member Now!</span></button></a></div>
+            </div>
 
             </div>
+
+
          </div>
       </div>
 
