--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ Training will take at calisthenics park on Saturdays (You will recive info via e
                   <h2 class="heading_section">CONTACTS</h3>
                </div>
             </div>
-            <div class="row">
+            <div class="col-md-12 text_align_center">
               <p><h2>If you have any question don't hesitate to contact me.</h2></p>
                <div class="col-md-12 text_align_center"><a id="mailto" href="mailto:araz.shafiyev@ufaz.az"><h3 style="color:blue;">araz.shafiyev@ufaz.az</h3></a></div>
             </div>
